// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CsaaAutoIdCardComponent should create a snapshot 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            WY Insurance Identification Card
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span
              data-test="named-insured"
            >
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span
              data-test="policy-card-number"
            >
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span
              data-test="vehicle-title"
            >
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span
              data-test="effective-date"
            >
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span
              data-test="vehicle-Id"
            >
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span
              data-test="expiration-date"
            >
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for CA 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            CA Insurance Identification Card
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span
              data-test="named-insured"
            >
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span
              data-test="policy-card-number"
            >
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span
              data-test="vehicle-title"
            >
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span
              data-test="effective-date"
            >
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span
              data-test="vehicle-Id"
            >
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span
              data-test="expiration-date"
            >
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span
              data-test="compliance"
            >
               This insurance complies with CVC §16056 or §16500.5 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for KY 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            COMMONWEALTH OF KENTUCKY
          </h1>
          <span
            class="subtitle"
          >
            PROOF OF INSURANCE
          </span>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span
              data-test="named-insured"
            >
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span
              data-test="policy-card-number"
            >
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span
              data-test="vehicle-title"
            >
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span
              data-test="effective-date"
            >
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span
              data-test="vehicle-Id"
            >
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span
              data-test="expiration-date"
            >
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for NJ 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            STATE OF NEW JERSEY 
   INSURANCE IDENTIFICATION CARD
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span
              data-test="named-insured"
            >
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span
              data-test="policy-card-number"
            >
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span
              data-test="vehicle-title"
            >
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span
              data-test="effective-date"
            >
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span
              data-test="vehicle-Id"
            >
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span
              data-test="expiration-date"
            >
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              ADDRESS
            </span>
          </p>
          <ion-row>
            <span
              data-test="customer-address-1"
            >
               30 N Piney Rd 
            </span>
          </ion-row>
          <ion-row>
            <span
              data-test="customer-address-2"
            >
            </span>
          </ion-row>
          <ion-row>
            <span
              data-test="customer-city"
            >
               Story, NJ 82832 
            </span>
          </ion-row>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for NV 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            NV Insurance Identification Card
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span
              data-test="named-insured"
            >
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span
              data-test="policy-card-number"
            >
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span
              data-test="vehicle-title"
            >
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span
              data-test="effective-date"
            >
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span
              data-test="vehicle-Id"
            >
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span
              data-test="expiration-date"
            >
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              ADDRESS
            </span>
          </p>
          <ion-row>
            <span
              data-test="customer-address-1"
            >
               30 N Piney Rd 
            </span>
          </ion-row>
          <ion-row>
            <span
              data-test="customer-address-2"
            >
            </span>
          </ion-row>
          <ion-row>
            <span
              data-test="customer-city"
            >
               Story, NV 82832 
            </span>
          </ion-row>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for OK 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            OK SECURITY VERIFICATION FORM
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span
              data-test="named-insured"
            >
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span
              data-test="policy-card-number"
            >
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span
              data-test="vehicle-title"
            >
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span
              data-test="effective-date"
            >
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span
              data-test="vehicle-Id"
            >
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span
              data-test="expiration-date"
            >
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              EXCLUDED DRIVERS
            </span>
            <span
              data-test="excluded-drivers"
            >
               Judy Quinn 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;
